force-app/main/default/objects/Migration_Details__c/Migration_Details__c.object-meta.xml
<!--
 * Copyright (c) 2018, salesforce.com, inc.
 * All rights reserved.
 * SPDX-License-Identifier: BSD-3-Clause
 * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
-->
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Migration Details</label>
</CustomObject>