force-app/main/default/objects/Migration_Details__c/fields/Allow_Solution_to_Send_eMail__c.field-meta.xml
<!--
 * Copyright (c) 2018, salesforce.com, inc.
 * All rights reserved.
 * SPDX-License-Identifier: BSD-3-Clause
 * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
-->
<CustomField>
    <fullName>Allow_Solution_to_Send_eMail__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If Yes, Partner Community User receives a welcome email upon creation as per the template &quot;Communities: ICT Migrate from CCP to PC Email&quot; in folder &quot;Customer to Partner Community Migration&quot;.</inlineHelpText>
    <label>Allow Solution to Send eMail</label>
    <type>Checkbox</type>
</CustomField>