force-app/main/default/objects/Migration_Details__c/fields/Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_URL__c</fullName>
    <inlineHelpText>Put Community URL till force.com i.e. https://migrodeptest-developer-edition.ap8.force.com. This is used in template &quot;Communities: Migrate from CCP to PC Email&quot; in folder Customer to Partner Community Migration.</inlineHelpText>
    <label>Community URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>