force-app/main/default/objects/Migration_Details__c/fields/PartnerSuffix__c.field-meta.xml
<CustomField>
    <fullName>PartnerSuffix__c</fullName>
    <inlineHelpText>Nickname of Partner Community User = Nickname of Customer Community User + &quot;.PartnerSuffix&quot;</inlineHelpText>
    <label>PartnerSuffix</label>
    <length>7</length>
    <type>Text</type>
</CustomField>