force-app/main/default/objects/Migration_Details__c/fields/Target_Profile__c.field-meta.xml
<!--
 * Copyright (c) 2018, salesforce.com, inc.
 * All rights reserved.
 * SPDX-License-Identifier: BSD-3-Clause
 * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
 -->
<CustomField>
    <fullName>Target_Profile__c</fullName>
    <inlineHelpText>Please enter name of the Partner Community User Profile.</inlineHelpText>
    <label>Target Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>